# list-management

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/account/: down.sql  up.sql
migrations/create_item_lists/: down.sql  up.sql
migrations/item_list/: down.sql  up.sql
migrations/item_list_attribute/: down.sql  up.sql
migrations/item_lists/: down.sql  up.sql
migrations/list_item/: down.sql  up.sql
migrations/list_item_attribute/: down.sql  up.sql
migrations/list_items/: down.sql  up.sql
migrations/user/: down.sql  up.sql
src/: account_storage.rs  common.rs  db.rs  helpers.rs  lib.rs  list_of_lists_service.rs  list_service.rs  list_storage.rs  main.rs  models.rs  route_config.rs  schema.rs  test_helpers.rs  test_setup_db.rs  user_service.rs  user_storage.rs
src/routes/: health_check.rs  list_of_lists.rs  mod.rs
tests/: health_check_test.rs  list_of_lists_service_test.rs
