[package]
name = "list-management"
version = "0.1.0"
edition = "2021"

[dependencies]
currency_rs = "1.3.0"
chrono = "0.4.38"
diesel = { version = "2.2.2", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
lazy_static = "1.5.0"
regex = "1.10.5"
strum = "0.26.3"
strum_macros = "0.26.4"
